--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.hbrs.ooka</groupId>
-    <artifactId>OOKAUe1</artifactId>
+    <artifactId>OOKAAbgabeLukasLeschUeb1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
