JUnit Tests hinzugefügt & kleine Anpassungen in RunEnvironment für Zugriff auf User Directory und returns für Tests

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,27 @@
             <artifactId>commons-compress</artifactId>
             <version>1.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.hbrs.ooka</groupId>
+            <artifactId>OOKAAbgabeLukasLeschUeb1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.athaydes.gradle.osgi</groupId>
+            <artifactId>osgi-run-core</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.framework -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.framework</artifactId>
+            <version>1.8.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+
     </dependencies>
 
 
